# oemof.industry

./: README.md  mimo_converter.py  mimo_crop_debug_dummy_sources.py  pyproject.toml  requirements.txt  test_mimo_converter.py
oemof_industry/: emission_constraint.py  mimo_converter.py
tests/: SEDOS_Modellstruktur.xlsx  test_datapackage.py  test_emission_constraint.py  test_mimo_converter.py  test_mimo_costs.py  test_mimo_investment.py
tests/datapackages/mimo/: datapackage.json
tests/datapackages/mimo/IIS_CHPSTMGAS101_LB/: datapackage.json
tests/datapackages/mimo/IIS_CHPSTMGAS101_LB/data/constraints/: emission_constraint.csv
tests/datapackages/mimo/IIS_CHPSTMGAS101_LB/data/elements/: bus.csv  el_demand.csv  emi_ch4_unused_sink.csv  emi_co2_unused_sink.csv  emi_n2o_unused_sink.csv  heat_demand.csv  mimo.csv  x2x_import_gas.csv  x2x_import_hydro.csv
tests/datapackages/mimo/IIS_CHPSTMGAS101_LB/data/sequences/: conversion_factors_out_sequence.csv  el_demand_sequence.csv  flow_share_fix_hydro.csv  flow_share_fix_hydro_sequence.csv  heat_demand_sequence.csv
tests/datapackages/mimo/data/elements/: bus.csv  ind_steel_casting_1.csv  pow_combustion_gt_natgas.csv  x2x_import_coke_oven_gas.csv  x2x_import_crudesteel.csv
tests/datapackages/mimo/data/sequences/: flow_share_fix_sec_H2_sequence.csv  ind_steel_demand_sequence.csv
tests/datapackages/mimo/exo_steel/: datapackage.json
tests/datapackages/mimo/exo_steel/data/elements/: bus.csv  (+3 more)
tests/datapackages/mimo/investment_var_output/: datapackage.json
tests/datapackages/mimo/saltwater/: datapackage.json
(+14 files in other folders)
