[tool.poetry]
name = "oemof-industry"
version = "0.1.0"
description = ""
authors = ["Hendrik Huyskens <hendrik.huyskens@rl-institut.de>"]
readme = "README.md"
packages = [{include = "oemof_industry"}]

[tool.poetry.dependencies]
python = ">=3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
